--- a/package.json
+++ b/package.json
@@ -32,6 +32,12 @@
     "@nestjs/typeorm": "^7.1.4",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
+    "compression": "^1.7.4",
+    "csurf": "^1.11.0",
+    "express-rate-limit": "^5.1.3",
+    "fastify-compress": "^3.4.0",
+    "fastify-helmet": "^5.0.3",
+    "helmet": "^4.2.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
     "passport": "^0.4.1",
